# kivy_matplotlib_widget

./: .flake8  .gitignore  404.html  LICENSE  PR34_UPDATE_SUMMARY.md  README.md  graph_generator.py  graph_generator_template.py  graph_widget.py  index.html  legend_widget.py  main.py  main_live_data.py  pyproject.toml  setup.py
example_3D/: graph_widget_3d.py  main.py
example_all_interactive_options/: graph_widget.py  main.py
example_basic/: graph_widget.py  main.py
example_basic_with_pip_install/: main.py
example_big_data/: graph_generator.py  main.py
example_compare_hover/: graph_generator.py  graph_widget.py  hover_widget.py  main.py
example_cursor/: graph_widget.py  main.py
example_cursor_scatter_experimental/: graph_generator.py  graph_widget.py  graph_widget_scatter.py  main.py
example_cusror/: graph_generator.py  graph_widget.py  main.py
example_cusror_scatter_experimental/: graph_generator.py  main.py
example_custom_touch_widget/: graph_generator.py  line_data.py
example_custom_touch_wisget/: graph_custom_widget.py  line_setting.py  main.py
example_hover/: graph_generator.py  graph_widget.py  hover_widget.py  main.py
example_legend/: graph_widget.py  legend_widget.py  main.py
example_legend_horizontal/: graph_generator.py  graph_widget.py  legend_widget.py
example_legend_matplotlib/: graph_widget.py  legend_widget.py  main.py
example_legend_matpotlib_with_figure_update/: graph_widget.py  legend_widget.py
example_live_data/: graph_generator.py  graph_widget.py  main.py  main_live_data.py
example_seaborn/: graph_widget.py  main.py  (+1 more)
(+121 files in other folders)
