[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kivy_matplotlib_widget"
dynamic = ["version"]
description = "A Matplotlib interactive widget for kivy"
authors = [
  { name="mp-007", email="current.address@unknown.invalid" },
  { name="T-Dynamos", email="anshdadwal298@mail.com" },
]
readme = {file = 'README.md', content-type='text/markdown', charset="UTF-8", variant="GFM"}
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "kivy>=2.0.0",
    "matplotlib>=3.5.2"
]
keywords = ['android', 'python3', 'kivy', 'matplotlib']

[tool.setuptools.dynamic]
version = {attr = "kivy_matplotlib_widget.__init__.__version__"}

[tool.setuptools.package-data]
kivy_matplotlib_widget = ["fonts/*.ttf"]

[project.urls]
Homepage = "https://github.com/mp-007/kivy_matplotlib_widget"
